# PLUSS_Sampler_Optimization

./: .gitignore  Cargo.toml  README.md  build.rs  main  output.txt  prepare_cpp.sh  run.sh  wrapper.h
c_lib/: playground.c  playground.h  pluss.h  pluss_utils.cpp  pluss_utils.h
c_lib/test/: Makefile  gemm.ppcg_omp.c  jacobi-2d.ppcg_omp.c
c_lib/test/runtime/: pluss.cpp  pluss.h  pluss_utils.h  pluss_utils_v2.cpp  pluss_utils_v2.h
c_lib/test/sampler/: gemm-t4-pluss-pro-model-ri-omp-seq.cpp  gemm-t4-pluss-pro-model-ri-omp.cpp  gemm-t4-pluss-pro-model-ri-opt.cpp  gemm-t4-pluss-pro-model-ri.cpp  gemm-t4-pluss-pro-model-rs-ri-opt-r10.cpp  jacobi-2d-t4-pluss-pro-model-ri-omp.cpp
src/: JH0416_4functions.rs  chunk.rs  chunk_dispatcher.rs  gemm_profiler.rs  gemm_sampler.rs  gemm_sampler_rayon.rs  gemm_sampler_spawn.rs  iteration.rs  lib.rs  main.rs  pluss_aet.rs  progress.rs  test.rs  unsafe_utils.rs  utils.rs
