[package]
name = "RUST_PLUSS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/sauceeeeage/PLUSS_Sampler_Optimization.git"

[dependencies]
#derivative = "2.2.0"
lazy_static = "1.4"
rayon = "1.7.0"
statrs = "0.16.0"
ahash = { version = "0.8.3", features = ["compile-time-rng", "std"] }

[profile.release]
lto = true
debug = true